--- a/zillow-time-series-analysis.ipynb
+++ b/zillow-time-series-analysis.ipynb
@@ -28,8 +28,8 @@
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from statsmodels.tsa.arima_model import ARIMA\n",
-    "from pmdarima import auto_arima\n",
     "from statsmodels.tools.eval_measures import rmse\n",
+    "from pmdarima import auto_arima\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -786,7 +786,7 @@
    "outputs": [],
    "source": [
     "def plot_values(df, title):\n",
-    "    \"\"\"Takes in a dataframe and grpah title, plots the average annual home values of the dataframe.\"\"\"\n",
+    "    \"\"\"Takes in a dataframe and graph title, plots the average annual home values of the dataframe.\"\"\"\n",
     "    df.resample(rule='A').mean().plot(figsize=(15,5))\n",
     "    plt.legend(['Mean Home Value'])\n",
     "    plt.grid()\n",
